gettext-macros/tests/ui/dgettext/mismatched_number_of_args.stderr
error: 1 positional argument in format string, but no arguments were given
 --> tests/ui/dgettext/mismatched_number_of_args.rs:4:29
  |
4 |     dgettext!("domainname", "{}");
  |                             ^^^^

error: 1 positional argument in format string, but there are 2 arguments
 --> tests/ui/dgettext/mismatched_number_of_args.rs:5:29
  |
5 |     dgettext!("domainname", "{}", 1, 2);
  |                             ^^^^

error: 2 positional arguments in format string, but no arguments were given
 --> tests/ui/dgettext/mismatched_number_of_args.rs:6:29
  |
6 |     dgettext!("domainname", "{}{}");
  |                             ^^^^^^

error: 2 positional arguments in format string, but there is 1 argument
 --> tests/ui/dgettext/mismatched_number_of_args.rs:7:29
  |
7 |     dgettext!("domainname", "{}{}", 1);
  |                             ^^^^^^

error: 3 positional arguments in format string, but there are 2 arguments
 --> tests/ui/dgettext/mismatched_number_of_args.rs:8:29
  |
8 |     dgettext!("domainname", "{}{}{}", 1, 2);
  |                             ^^^^^^^^
