gettext-macros/tests/ui/dgettext/mismatched_number_of_args.rs
use gettext_macros::*;

fn main() {
    dgettext!("domainname", "{}");
    dgettext!("domainname", "{}", 1, 2);
    dgettext!("domainname", "{}{}");
    dgettext!("domainname", "{}{}", 1);
    dgettext!("domainname", "{}{}{}", 1, 2);
}
